<resources>
    <string name="app_name">DentistCard</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Cities">Города</string>
    <string name="City">Город:</string>
    <string name="OldCity">Текущий город</string>
    <string name="NewCity">Новый город</string>
    <string name="Countries">Страны</string>
    <string name="Country">Страна:</string>
    <string name="OldCountry">Текущий страна</string>
    <string name="NewCountry">Новая страна</string>
    <string name="Posts"> Должности</string>
    <string name="Post">Должность</string>
    <string name="PostHint">Должность:</string>
    <string name="Kvalifications">Квалификации</string>
    <string name="KvalificationShortest">Ква-ции</string>
    <string name="Kvalification">Квалификация</string>
    <string name="KvalificationHint">Квалификация:</string>
    <string name="Expirience">Опыт:</string>
    <string name="Changes">Смены</string>
    <string name="OldChange">Текущая смена</string>
    <string name="NewChange">Новая смена</string>
    <string name="Department">Типы врачей</string>
    <string name="DepartmentDoctor">Тип врача:</string>
    <string name="OldDepartmentDoctor">Текущий тип врача</string>
    <string name="NewDepartmentDoctor">Новый тип врача</string>
    <string name="Doctors">Врачи</string>
    <string name="Timetables">Расписание работы</string>
    <string name="TimetablesShortest">Рас-ние</string>
    <string name="DateWork">Дата работы</string>
    <string name="DoctorKod">Врач</string>
    <string name="FIO">ФИО:</string>
    <string name="ChangeKod">Смена</string>
    <string name="Change">Смена:</string>
    <string name="Particients">Пациенты</string>
    <string name="ParticientsShortest">П-енты</string>
    <string name="Diagnoses">Диагнозы</string>
    <string name="DiagnosesShortest">Д-нозы</string>
    <string name="Diagnose">Диагноз:</string>
    <string name="OldDiagnose">Текущий диагноз</string>
    <string name="NewDiagnose">Новый диагноз</string>
    <string name="Registration">Р-ция</string>
    <string name="RegistrationFull">Регистрация</string>
    <string name="Registrations">Регистрации</string>
    <string name="Ticket">Билеты</string>
    <string name="TicketHint">Билет:</string>
    <string name="Recommendation">Р-ции</string>
    <string name="RecommendationFull">Рекомендации</string>
    <string name="Insert">Добавить</string>
    <string name="Send">Отправлено</string>
    <string name="PostShortest">Д-жность</string>
    <string name="InsertCountry">Добавление страны</string>
    <string name="InsertCity">Добавление города</string>
    <string name="InsertChange">Добавление смены</string>
    <string name="InsertDepartmentDoctor">Добавление подраздления врача</string>
    <string name="InsertDiagnose">Добавление диагноза</string>
    <string name="InsertKvalification">Добавление квалификации</string>
    <string name="InsertParticient">Добавление пациента</string>
    <string name="InsertPost">Добавление должности</string>
    <string name="InsertRecommendation">Добавление рекомендации</string>
    <string name="InsertRegistration">Добавленение регистрации</string>
    <string name="InsertTicket">Добавление талончика</string>
    <string name="UpdateCountry">Обновление стран</string>
    <string name="UpdateCity">Обновление городов</string>
    <string name="UpdateChange">Обновление смен</string>
    <string name="UpdateDiagnose">Обновление диагнозов</string>
    <string name="UpdateDepartmentDoctors">Обновление типов врачей</string>
    <string name="UpdateDoctors">Обновление докторов</string>
    <string name="UpdateKvalification">Обновление квалификаций</string>
    <string name="UpdateParticient">Обновление пациентов</string>
    <string name="UpdatePost">Обновнение должностей</string>
    <string name="UpdateRegistration">Обновление регистрации</string>
    <string name="UpdateRecomendation">Обновление рекомендации</string>
    <string name="UpdateTicket">Обновление билетов</string>
    <string name="UpdateTimetable">Обновление расписания</string>
    <string name="Address">Адресс:</string>
    <string name="PhoneNumber">Телефон:</string>
    <string name="DateBorn">Дата рождения:</string>
    <string name="FioParent">ФИО родителей:</string>
    <string name="Therapy">Лечение:</string>
    <string name="Complaints">Жалобы:</string>
    <string name="ObjectiveValues">Объективные данные:</string>
    <string name="HistoryIllness">История заболевания:</string>
    <string name="DateRegistration">Дата регистрации:</string>
    <string name="Particient">Пациент:</string>
    <string name="DoctorHint">Врач:</string>
    <string name="DateReception">Дата приема:</string>
    <string name="DateWorkHint">Рабочее время:</string>
    <string name="OldDoctor">Текущий доктор</string>
    <string name="NewDoctor">Новый доктор</string>
    <string name="OldPost">Текущая должность</string>
    <string name="NewPost">Новая должность</string>
    <string name="OldKvalification">Текущая квалификация</string>
    <string name="NewKvalification">Новая квалификация</string>
    <string name="OldExpirience">Текущий опыт</string>
    <string name="NewExpirience">Новый опыт</string>
    <string name="OldParticient">Текущий пациент</string>
    <string name="NewParticient">Новый пациент</string>
    <string name="OldAddress">Текущий адресс</string>
    <string name="NewAddress">Новый адресс</string>
    <string name="OldPhone">Текущий телефон</string>
    <string name="NewPhone">Новый телефон</string>
    <string name="OldDateBorn">Текущая дата рождения</string>
    <string name="NewDateBorn">Новая дата рождения</string>
    <string name="OldFIOParent">Текущие ФИО родителей</string>
    <string name="NewFIOParent">Новые ФИО родителей</string>
    <string name="OldTicket">Текущий билет</string>
    <string name="NewTicket">Новый билет</string>
    <string name="OldTherapy">Текущие лечение</string>
    <string name="NewTherapy">Новое лечение</string>
    <string name="OldComplaints">Текущие жалобы</string>
    <string name="NewComplaints">Новые жалобы</string>
    <string name="OldHistoryIllness">Текущая история болезни</string>
    <string name="NewHistoryIllness">Новая история болезни</string>
    <string name="OldObjectiveValues">Текущие объективные показатели</string>
    <string name="NewObjectiveValues">Новые объективные показатели</string>
    <string name="OldDateRegistration">Текущая дата регистрации</string>
    <string name="NewDateRegistration">Новая дата регистрации</string>
    <string name="OldRegistration">Текущая регистрация</string>
    <string name="NewRegistration">Новая регистрация</string>
    <string name="OldDateReception">Текущая дата приема</string>
    <string name="NewDateReception">Новая дата приема</string>
    <string name="OldDateWork">Текущая дата работы</string>
    <string name="NewDateWork">Новая дата работы</string>
    <string name="CityHeader">Город</string>
    <string name="CountryHeader">Страна</string>
    <string name="DateRegistrationHeader">Дата регистрации</string>
    <string name="ParticientHeader">Пациент</string>
    <string name="DateReceptionHeader">Дата приема</string>
    <string name="DoctorFIOHeader">ФИО</string>
    <string name="RegistrationHint">New to Dentists? Register here</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name='UserName'>User name</string>
    <string name="SignUp">Sign Up</string>
    <string name="SignIn">Sign In</string>
    <string name="Profile">Profile</string>
    <string name="CorrectRegistration">Не все поля введены, укажите все не заполненые поля</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_tickets">Новые билеты</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">О себе</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>
    <string name="action_remove">Remove</string>
    <string name="selected_count">%1$s selected</string>
    <string name="hintCountry">Укажите страну</string>
    <string name="IncorrectUser">Данный пользователь не зарегистрирован</string>
    <string name="InputEmailPassword">Не указан email или пароль</string>
    <string name="CorrectUser">Пользователь с таким email существует</string>
    <string name="NewMessage">Новые сообщения</string>
    <string name="SendMessage">Отправить сообщение</string>
    <string name="Autoresation">Авторизация</string>
    <string name="AllTicket">Все билеты</string>
    <string name="ShowMail">Просмотреть письма</string>
    <string name="AllParticient">Обработанные пациенты</string>
    <string name="AllParticients">Обработанные пациенты:</string>
    <string name="AllParticientsDate">Пациенты с %1$s по %2$s:</string>
    <string name="FromDate">Начальная дата:</string>
    <string name="ToDate">Конечная дата:</string>
    <string name="SkillDoctor">Успеваимость врачей</string>
    <string name="action_about">About</string>
    <string name="title_activity_line_chart">LineChartActivity</string>
    <string name="title_activity_column_chart">ColumnChartActivity</string>
    <string name="title_activity_pie_chart">PieChartActivity</string>
    <string name="title_activity_bubble_chart">BubbleChartActivity</string>
    <string name="title_activity_preview_line_chart">PreviewLineChartActivity</string>
    <string name="title_activity_preview_column_chart">PreviewColumnChartActivity</string>
    <string name="title_activity_combo_line_column_chart">ComboLineColumnChartActivity</string>
    <string name="title_activity_line_column_dependency">LineColumnDependency</string>
    <string name="title_activity_good_bad">GoodBadActivity</string>
    <string name="title_activity_tempo_chart">TempoChartActivity</string>
    <string name="title_activity_speed_chart">SpeedChartActivity</string>
    <string name="title_activity_view_pager_charts">ViewPagerChartsActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_version_label">"Library version "</string>
    <string name="about_author">Leszek Wach 2014</string>
    <string name="about_app_icon_content_description">App icon</string>
    <string name="about_go_to_github">Go to GitHub</string>
    <string name="statistic">Статистика</string>
    <string name="AddContent">Заполните все поля</string>
</resources>
